# milf-revamped

./: .env.example  .gitignore  AGENTS.md  PRIVACY.md  README.md  SECURITY.md  render.yaml
.github/workflows/: ci.yml
android/: gradlew  gradlew.bat  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
backend/: pyproject.toml  requirements.txt
backend/harness/: run_hero.py
backend/milf/: agent_runner.py  clarification.py  confirmation.py  connection.py  contacts.json  context.py  harness_support.py  intent_router.py  mock_app.py  narration.py  perceive.py  policy.py  protocol.py  runtime_failures.py  runtime_logging.py  server.py  session.py  settings.py  stt.py  ws_driver.py
backend/scripts/: spike_contract.py
backend/tests/: test_agent_runner.py  test_app_cards.py  test_clarification.py  test_confirmation.py  test_connection.py  test_context.py  test_harness.py  test_intent_router.py  test_mock_app.py  test_narration.py  test_perceive.py  test_policy.py  test_protocol.py  test_protocol_outcomes.py  test_server.py  test_session.py  test_settings.py  test_stt.py  test_ws_driver.py
config/app_cards/: app_cards.json
config/app_cards/media/: youtube_music.md
config/app_cards/social/: whatsapp.md
docs/: Droidrun-info.md  VISION.md  android-demo-runbook.md  architecture.md  brand-kit.html  mobilerun_contract.md  narration-policy.md  pitch-deck-prep-guide.md  production-readiness-audit.md  release-checklist.md  submission-writeup.md  tester-usage-guide.md
docs/superpowers/plans/: 2026-06-22-milf-backend.md  2026-06-24-milf-ux-overlay.md  (+4 more)
(+66 files in other folders)
